--- a/Fragments/app/src/main/AndroidManifest.xml
+++ b/Fragments/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+
+            android:exported="false" />
+        <activity
+            android:name=".Login_SignUP"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
