--- a/Fragments/app/src/main/AndroidManifest.xml
+++ b/Fragments/app/src/main/AndroidManifest.xml
@@ -13,8 +13,13 @@
         android:theme="@style/Theme.Material3.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".Registro.SelectTopic"
+            android:exported="false" />
+        <activity
+            android:name=".Registro.Registro"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
-
             android:exported="false" />
         <activity
             android:name=".Login_SignUP"
