--- a/Fragments/app/build.gradle
+++ b/Fragments/app/build.gradle
@@ -45,10 +45,11 @@ dependencies {
     androidTestImplementation("androidx.test.espresso:espresso-core")
     implementation("androidx.fragment:fragment:1.6.2")
     runtimeOnly 'com.h2database:h2'
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //BORRAR
+    //BORRAR ESTO
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
