--- a/Fragments/app/src/main/AndroidManifest.xml
+++ b/Fragments/app/src/main/AndroidManifest.xml
@@ -9,24 +9,30 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:windowSoftInputMode="adjustNothing"
             android:name=".ChatActivity"
             android:exported="false" />
         <activity
+            android:windowSoftInputMode="adjustNothing"
             android:name=".Registro.SelectTopic"
             android:exported="false" />
         <activity
+            android:windowSoftInputMode="adjustNothing"
             android:name=".Registro.Registro"
             android:exported="false" />
         <activity
+            android:windowSoftInputMode="adjustNothing"
             android:name=".MainActivity"
             android:exported="false" />
         <activity
+            android:windowSoftInputMode="adjustNothing"
             android:name=".Login_SignUP"
             android:exported="true">
             <intent-filter>
