--- a/Fragments/app/src/main/AndroidManifest.xml
+++ b/Fragments/app/src/main/AndroidManifest.xml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:windowSoftInputMode="adjustNothing"
+            android:name=".EditProfile"
+            android:exported="false" />
+        <activity
             android:name=".ChatActivity"
-            android:exported="false" />
+            android:exported="false"/>
         <activity
-            android:windowSoftInputMode="adjustNothing"
             android:name=".Registro.SelectTopic"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:windowSoftInputMode="adjustNothing"
             android:name=".Registro.Registro"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:windowSoftInputMode="adjustNothing"
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:windowSoftInputMode="adjustNothing"
             android:name=".Login_SignUP"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
