--- a/Fragments/app/src/main/AndroidManifest.xml
+++ b/Fragments/app/src/main/AndroidManifest.xml
@@ -15,11 +15,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ComentariosActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfile"
             android:exported="false" />
         <activity
             android:name=".ChatActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Registro.SelectTopic"
             android:exported="false"
