--- a/Fragments/app/src/main/AndroidManifest.xml
+++ b/Fragments/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".EditProfile"
             android:exported="false" />
         <activity
-            android:name=".ChatActivity"
+            android:name=".Chat.ChatActivity"
             android:exported="false" />
         <activity
             android:name=".Registro.SelectTopic"
