Metodo para comentar hecho, falta hacer el insert

--- a/springPrueba/src/main/resources/application.properties
+++ b/springPrueba/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8086
-spring.datasource.url=jdbc:mysql://localhost:3310/foro?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+spring.datasource.url=jdbc:mysql://localhost:3306/foro?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=AlumnoIFP
 spring.jpa.hibernate.ddl-auto=none
