--- a/Fragments/app/src/main/AndroidManifest.xml
+++ b/Fragments/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".userProfileView"
+            android:exported="false" />
+        <activity
             android:name=".ComentariosActivity"
             android:exported="false" />
         <activity
