--- a/Fragments/app/build.gradle
+++ b/Fragments/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.projectlombok:lombok'
     //
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
