--- a/Fragments/app/build.gradle
+++ b/Fragments/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation 'org.projectlombok:lombok'
     //
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //
+    implementation 'com.google.mlkit:translate:17.0.2'
 }
