--- a/springPruebaNewBD/src/main/resources/application.properties
+++ b/springPruebaNewBD/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3307/foro?useSSL=false&serverTimezo
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
