--- a/Fragments/app/build.gradle
+++ b/Fragments/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     implementation 'org.projectlombok:lombok'
     //
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
 }
