--- a/springPruebaNewBD/src/main/resources/application.properties
+++ b/springPruebaNewBD/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8086
-spring.datasource.url=jdbc:mysql://localhost:3310/foro?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+spring.datasource.url=jdbc:mysql://localhost:3306/foro?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=AlumnoIFP
 spring.jpa.hibernate.ddl-auto=none
 
 spring.servlet.multipart.max-file-size=5MB
