--- a/Fragments/app/build.gradle
+++ b/Fragments/app/build.gradle
@@ -57,4 +57,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
+
+    implementation 'androidx.activity:activity:1.9.0'
+
+
 }
