--- a/Fragments/app/build.gradle
+++ b/Fragments/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+
 
     //BORRAR ESTO
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
