--- a/ForoEx_App/app/src/main/AndroidManifest.xml
+++ b/ForoEx_App/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Login_SignUP"
+            android:name=".LoginSignUP"
             android:exported="false"
             android:windowSoftInputMode="adjustNothing">
         </activity>
